src/objects/IDC_Task__c.object
<CustomObject>
    <description>TOOLKIT - An object that represents work assigned to an offshore team.</description>
    <fields>
        <fullName>Actual_LOE__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Shows the Actual Level of efforts for the Task</description>
        <label>Actual LOE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assigned_Date__c</fullName>
        <description>It’s the date when the task was assigned.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Build_Task_Type__c</fullName>
        <description>Shows type of the Task</description>
        <label>Build Task Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Task_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Configuration</fullName>
                </value>
                <value>
                    <fullName>Customization</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CWB_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Shows if the Config workbook was updated or not</description>
        <label>CWB Updated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Comments on the Task</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Complete__c</fullName>
        <formula>IF(ISPICKVAL(Status__c, &quot;Completed&quot;), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Complete?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Components_Updated_in_CWB__c</fullName>
        <description>Details of the components updated in connfig workbook for the task</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Components Updated in CWB</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Defect_Description__c</fullName>
        <description>Description of the defect</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Defect Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Defect_Found__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Shows if the defect was found or not</description>
        <label>Defect Found</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Defect__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related defect to the task</description>
        <label>Defect</label>
        <referenceTo>Defect__c</referenceTo>
        <relationshipLabel>IDC Tasks</relationshipLabel>
        <relationshipName>IDC_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>End date of the task</description>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IDC_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related IDC Task</description>
        <label>IDC Task</label>
        <referenceTo>IDC_Task__c</referenceTo>
        <relationshipLabel>IDC Tasks</relationshipLabel>
        <relationshipName>IDC_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PM_Efforts__c</fullName>
        <description>Type of &apos;PM efforts&apos; task type</description>
        <label>PM Efforts</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Task_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>CAR Activities</fullName>
                </value>
                <value>
                    <fullName>DAR Activities</fullName>
                </value>
                <value>
                    <fullName>DART Activities</fullName>
                </value>
                <value>
                    <fullName>EBS Reporting</fullName>
                </value>
                <value>
                    <fullName>Project Initiation</fullName>
                </value>
                <value>
                    <fullName>Project Planning</fullName>
                </value>
                <value>
                    <fullName>Review Defect Logs</fullName>
                </value>
                <value>
                    <fullName>Review Issue Logs</fullName>
                </value>
                <value>
                    <fullName>Review Risk Logs</fullName>
                </value>
                <value>
                    <fullName>Update Issue Logs</fullName>
                </value>
                <value>
                    <fullName>Update Project Plan</fullName>
                </value>
                <value>
                    <fullName>Update Risk Logs</fullName>
                </value>
                <value>
                    <fullName>Project Closing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Planned_LOE__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Shows planned Level of efforts for the Task</description>
        <label>Planned LOE</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>Priority of the task</description>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Name__c</fullName>
        <description>Related request&apos;s Client request ID</description>
        <formula>Request__r.Client_Request_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Request Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related request to the IDC task</description>
        <label>Requirement</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>IDC Tasks</relationshipLabel>
        <relationshipName>IDC_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Start Date of the task</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the task</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Re-assigned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_Description__c</fullName>
        <description>Description of the task</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Task Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Task_Type__c</fullName>
        <description>Type of the task</description>
        <label>Task Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Analysis</fullName>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Build</fullName>
                </value>
                <value>
                    <fullName>Build Review</fullName>
                </value>
                <value>
                    <fullName>Code Review</fullName>
                </value>
                <value>
                    <fullName>Test Script Preparation</fullName>
                </value>
                <value>
                    <fullName>Test Script Review</fullName>
                </value>
                <value>
                    <fullName>Test Script Execution</fullName>
                </value>
                <value>
                    <fullName>Defect Fix - Build</fullName>
                </value>
                <value>
                    <fullName>Defect Fix - Code</fullName>
                </value>
                <value>
                    <fullName>Defect Fix - Test Script</fullName>
                </value>
                <value>
                    <fullName>PM Efforts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Track__c</fullName>
        <description>Track of the task</description>
        <label>Track</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Track 1</fullName>
                </value>
                <value>
                    <fullName>Track 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_Test_Script_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Shows if unit test scripts were attached or not</description>
        <label>Unit Test Script Attached?</label>
        <type>Checkbox</type>
    </fields>
    <label>IDC Task</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Task_Type__c</columns>
        <columns>Build_Task_Type__c</columns>
        <columns>Assigned_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Request__c</columns>
        <columns>Defect__c</columns>
        <columns>Actual_LOE__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IDCTask-{0000000000}</displayFormat>
        <label>IDC Task ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IDC Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Attributes_Covered</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT(Status__c) = &apos;Completed&apos; &amp;&amp; ( Actual_LOE__c = 0.00 || TEXT(Actual_LOE__c) = &apos;&apos; || Comments__c = &apos;&apos; || Planned_LOE__c = 0.00 || TEXT(Planned_LOE__c) = &apos;&apos; || TEXT(Start_Date__c) = &apos;&apos; || TEXT(End_Date__c) = &apos;&apos;)</errorConditionFormula>
        <errorMessage>Please enter Comments, Start Date, End Date, Actual LOE and Planned LOE.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CWB_Updated_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND( IF(CWB_Updated__c , True, False),
ISBLANK( Components_Updated_in_CWB__c ) )</errorConditionFormula>
        <errorDisplayField>Components_Updated_in_CWB__c</errorDisplayField>
        <errorMessage>Please enter components updated in CWB.</errorMessage>
    </validationRules>
</CustomObject>